--- a/helperinsert/form2.html
+++ b/helperinsert/form2.html
@@ -4,31 +4,91 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Form</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .form-container {
+            background-color: #f8f9fa;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .table-container {
+            margin-top: 20px;
+        }
+        table thead {
+            background-color: #343a40;
+            color: #fff;
+        }
+        table tbody tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+        table tbody tr:nth-child(odd) {
+            background-color: #e9ecef;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <h2>Contact Form</h2>
-        <form action="form_submission.php" method="POST">
-            <div class="form-group">
-                <label for="name">Name:</label>
-                <input type="text" class="form-control" id="name" name="name" required>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="form-container">
+                <h2 class="mb-4">Contact Form</h2>
+                <form action="form_submission.php" method="POST">
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Name:</label>
+                        <input type="text" class="form-control" id="name" name="name" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email:</label>
+                        <input type="email" class="form-control" id="email" name="email" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="message" class="form-label">Message:</label>
+                        <textarea class="form-control" id="message" name="message" required></textarea>
+                    </div>
+                    <input type="hidden" value="contacts" name="contacts">
+                    <button type="submit" class="btn btn-primary w-100">Submit</button>
+                </form>
             </div>
-            <div class="form-group">
-                <label for="country">country:</label>
-                <input type="text" class="form-control" id="country" name="country" required>
-            </div>
-            <div class="form-group">
-                <label for="state">State:</label>
-                <input type="text" class="form-control" id="state" name="state" required>
-            </div>
-            <div class="form-group">
-                <label for="department">Department:</label>
-                <input type="text" class="form-control" id="department" name="department" required>
-            </div>
-            <input type="hidden"   value="contacts2" name="contacts">
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+        </div>
     </div>
+</div>
+<div class="container table-container" id="employees">
+</div>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(document).ready(function() {
+        loadEmployees(); // Load employees when the page loads
+    });
+
+    function loadEmployees() {
+        var tableName = 'contacts2'; // Use the table name you want to fetch data from
+        $.ajax({
+            url: 'backend.php',
+            type: 'post',
+            data: { action: 'fetch', name1: tableName },
+            success: function(response) {
+                console.log(response); // Debugging: Print the response to the console
+                try {
+                    var employees = JSON.parse(response);
+                    var html = '<table class="table table-bordered"><thead><tr><th>ID</th><th>Name</th><th>country</th><th>state</th><th>department</th></tr></thead><tbody>';
+                    employees.forEach(function(employee) {
+                        html += '<tr><td>' + employee.id + '</td><td>' + employee.name + '</td><td>' + employee.country + '</td><td>' + employee.state + '</td><td>' + employee.department + '</td></tr>';
+                    });
+                    html += '</tbody></table>';
+                    $('#employees').html(html);
+                } catch (e) {
+                    console.error('Error parsing JSON:', e);
+                    console.error('Response:', response);
+                }
+            },
+            error: function(xhr, status, error) {
+                console.error('AJAX error:', error);
+            }
+        });
+    }
+</script>
+
 </body>
 </html>
